--- a/cv.tex
+++ b/cv.tex
@@ -9,15 +9,16 @@
 \interests{Development of individual differences}
 \interests{Quantitative methodology}
 
-\position{Graduate Research/Teaching Fellow, University of Oregon, 2012–Present}
+\position{Graduate Research/Teaching Fellow, University of Oregon, 2012–2018}
 \position{Research Coordinator, Stanford University School of Medicine, 2009–2012}
 \position{} % extra empty position is neccessary 
 
 \award{Gary E. Smith Summer Professional Development Award, University of Oregon, 2015}
 \award{Clarence and Lucille Dunbar Scholarship, University of Oregon, 2014}
-\award{} % extra empty award is neccessary 
+\award{\pagebreak} % extra empty award is neccessary 
 
-\publication{Thalmayer, A.G., Saucier, G., Srivastava, S.,  \& Flournoy, J. C. (under review). Ethics-Relevant Values in Adulthood: Longitudinal Findings from the Life and Time Study.}%
+\publication{Thalmayer, A.G., Saucier, G., Flournoy, J. C., \& Srivastava, S. (under review). Ethics-Relevant Values as Antecedents of Personality Change: Longitudinal Findings from the Life and Time Study. \textit{European Journal of Personality}.}%
+\publication{Thalmayer, A.G., Saucier, G., Srivastava, S.,  Flournoy, J. C., \& Costello, C. K. (revised and resubmitted). Ethics-Relevant Values in Adulthood: Longitudinal Findings from the Life and Time Study. \textit{Journal of Personality}.}%
 \publication{de Macks, Z. A. O., Flannery, J. E., Peake, S. J., Flournoy, J. C., Mobasser, A., Alberti, S. L., ... \& Pfeifer, J. H. (2018). Novel insights from the Yellow Light Game: Safe and risky decisions differentially impact adolescent outcome-related brain function. \textit{NeuroImage}. \href{https://doi.org/10.1016/j.neuroimage.2018.06.058}{10.1016/j.neuroimage.2018.06.058}}%
 \publication{Flannery, J. E., Giuliani, N., Flournoy, J. C., \& Pfeifer, J. H. (2017). Neurodevelopmental Changes Across Adolescence in Viewing and Labeling Dynamic Peer Emotions. \textit{Developmental Cognitive Neuroscience, 25}, 113-127. \href{http://dx.doi.org/10.1016/j.dcn.2017.02.003}{10.1016/j.dcn.2017.02.003}}%
 \publication{Giuliani, N. R., Flournoy, J. C., Ivie, E. J., Von Hippel, A., \& Pfeifer, J. H. (2017). Presentation and Validation of the DuckEES Child and Adolescent Dynamic Facial Expressions Stimulus Set. \textit{International Journal of Methods in Psychiatric Research, 26(1)}, e1553. \href{https://doi.org/10.1002/mpr.1553}{10.1002/mpr.1553}}%
