--- a/dedication.tex
+++ b/dedication.tex
@@ -1,3 +1,3 @@
-This is your optional dedication text;
-
-It can span over multiple lines.
+To who you are, and will never be.
+To Ozymandias.
+But most of all, to my wife, Melanie Berry.
