--- a/preamble.tex
+++ b/preamble.tex
@@ -130,10 +130,10 @@
 \committee{Sanjay Srivastava    & Co-Chair \\
            Elliot Berkman    & Core Member \\
            Nicole Giuliani & Institutional Representative \\}
-\graddean{Sara Hodges}
+\graddean{Janet Woodruff-Borden}
 \abstract{
 The study of decision making during adolescence has received considerable attention throughout the history of developmental psychology, justifiably, given the marked increases in morbidity and mortality that belie otherwise robust health.
-Although the dominant theories invoked to help explain decision-making during adolescence acknowledge the existence of motivations that are thought to be central to this developmental period, there is almost no work that investigates the effect of these motives, per se.
+Although the dominant theories invoked to help explain decision-making during adolescence acknowledge the existence of motivations that are thought to be central to this developmental period, there is little work that investigates the effects of these motives, per se.
 In particular, motivations toward developing sexual and romantic relationships, as well as finding one's optimal position in peer status hierarchies have both been acknowledged as especially relevant for this period of development.
 Almost all research in this area focuses on self-report, and is heavily weighted toward the domain of status and popularity.
 A major gap in this literature is an understanding of how adolescent-relevant motivations affect basic behavioral processes, and of the consequences of individual differences in motivations.
@@ -162,15 +162,16 @@ Self-report trait instruments performed well, but a more comprehensive taxonomy 
 \interests{Development of individual differences}
 \interests{Quantitative methodology}
 
-\position{Graduate Research/Teaching Fellow, University of Oregon, 2012–Present}
+\position{Graduate Research/Teaching Fellow, University of Oregon, 2012–2018}
 \position{Research Coordinator, Stanford University School of Medicine, 2009–2012}
 \position{} % extra empty position is neccessary 
 
 \award{Gary E. Smith Summer Professional Development Award, University of Oregon, 2015}
 \award{Clarence and Lucille Dunbar Scholarship, University of Oregon, 2014}
-\award{} % extra empty award is neccessary 
+\award{\pagebreak} % extra empty award is neccessary 
 
-\publication{Thalmayer, A.G., Saucier, G., Srivastava, S.,  \& Flournoy, J. C. (under review). Ethics-Relevant Values in Adulthood: Longitudinal Findings from the Life and Time Study.}%
+\publication{Thalmayer, A.G., Saucier, G., Flournoy, J. C., \& Srivastava, S. (under review). Ethics-Relevant Values as Antecedents of Personality Change: Longitudinal Findings from the Life and Time Study. \textit{European Journal of Personality}.}%
+\publication{Thalmayer, A.G., Saucier, G., Srivastava, S.,  Flournoy, J. C., \& Costello, C. K. (revised and resubmitted). Ethics-Relevant Values in Adulthood: Longitudinal Findings from the Life and Time Study. \textit{Journal of Personality}.}%
 \publication{de Macks, Z. A. O., Flannery, J. E., Peake, S. J., Flournoy, J. C., Mobasser, A., Alberti, S. L., ... \& Pfeifer, J. H. (2018). Novel insights from the Yellow Light Game: Safe and risky decisions differentially impact adolescent outcome-related brain function. \textit{NeuroImage}. \href{https://doi.org/10.1016/j.neuroimage.2018.06.058}{10.1016/j.neuroimage.2018.06.058}}%
 \publication{Flannery, J. E., Giuliani, N., Flournoy, J. C., \& Pfeifer, J. H. (2017). Neurodevelopmental Changes Across Adolescence in Viewing and Labeling Dynamic Peer Emotions. \textit{Developmental Cognitive Neuroscience, 25}, 113-127. \href{http://dx.doi.org/10.1016/j.dcn.2017.02.003}{10.1016/j.dcn.2017.02.003}}%
 \publication{Giuliani, N. R., Flournoy, J. C., Ivie, E. J., Von Hippel, A., \& Pfeifer, J. H. (2017). Presentation and Validation of the DuckEES Child and Adolescent Dynamic Facial Expressions Stimulus Set. \textit{International Journal of Methods in Psychiatric Research, 26(1)}, e1553. \href{https://doi.org/10.1002/mpr.1553}{10.1002/mpr.1553}}%
@@ -184,11 +185,43 @@ Self-report trait instruments performed well, but a more comprehensive taxonomy 
 \publication{} % extra empty publication is neccessary 
 
 \acknowledge{
-Thanks to all (this is a placeholder).
+The work contained herein may be understood as but a byproduct of the process of coming to understand two important lessons: that psychological science profoundly shapes the public discourse around perennially vulnerable groups; and that paths to knowledge in this science are beset on all sides by demons of obfuscation.
+No instrument can measure the immensity of my gratitude to my advisors, and mentors, who led me through these lessons.
+Jennifer Pfeifer was a profound and subtle guide as I sifted through a multiplicity of substantive interests, and then provided a rich environment where I could productively explore the content that eventually lead to this project; she was an editor of writing and concept par excellence; and she honed well my nascent, stubborn, predilections for new methods and new scientific culture.
+Sanjay Srivastava somehow laid bare, with calm, humor, or fury, as appropriate, vast sections of the machine we use to try to know things in this corner of science -- how much of the machine is still hidden, I don't know, but he also provided me tools to keep meddling about; and he showed me how to keep a light on, and a true path set, just as dark clouds appeared on the horizon.
+I'm grateful to Elliot Berkman, too, who has from the beginning encouraged my strengths, given support whenever asked, and provided clear and thoughtful discussion on problems in methodology, content, and professional development.
+And thanks to Nicole Giuliani who was willing to collaborate with me as an early grad student, who didn't mind my cantankerous fastidiousness, and who helped turn it toward useful ends.
+Kate Mills gave invaluable feedback when the plan for this project was just coalescing, shepherded its completion as each section began to take shape, but more vital than that, offered me professional camaraderie in that liminal space between mentor and peer.
+I would also like to thank Ruth O'Hara for giving me an opportunity to return to psychological research based on little more than my earnest conviction of interest in the field, and for subsequently, incidentally but not unintentionally, exposing me to didactic content for a full post-doctoral training program before I had even applied to graduate school.
+I would not have arrived at this point so easily without that kindness.
+
+My appreciation is everlasting for the numerous fellow graduate students who enhanced every aspect of my life and work.
+My thanks goes to Rose Hartman, a role model who translated complexity into fluency, and who introduced me to Bayes.
+I am grateful, also, to Rose, Nicole Lawless DesJardins, and Allison Tackman for teaching me statistics; and to Rose and Nicole for establishing and cultivating R Club, where once a week or so we could all spend an hour basking in scientific computing with other methods mavens.
+Thanks to Will Moore, who taught me everything he could about neuroimaging, and who saw its problems with clear eyes.
+I owe Shannon Peak my thanks for suggesting, with a knowing grin, that I might like computational models of cognition.
+I am deeply grateful to Dani Cosme for her adroit intellect as we delved into countless conversations that shaped both how I understand development during adolescence and why I would want to; for conversations on so many other topics; and for inspiring pragmatic idealism by example.
+I am thankful for Arian Mobasser's friendship, and for the tremendous structure of community and wellbeing he built that sustained me and many others during this process.
+I am also thankful for Jimena Santillán's friendship, her industrious example, her advice on how exactly to start and finish this thing, and for her ear, which somehow makes things clearer.
+
+I owe Lori Olson an immense debt of gratitude for all the administrative support starting from when I submitted my application, and lasting until the last form was signed and submitted. 
+She made it possible to complete this project amidst the continuation of the rest of life.
+
+I am not the author of this dissertation but for the love and friendship of these coauthors of my life:
+Thanks to my sister, Michele Flournoy, who encouraged me to tag along with her on a career-changing adventure that reminded me how fun and rewarding concrete abstractions can be.
+Thanks to Andrei Boutyline, with whom I've hunted all manner of thought through nearly half of all conceivable terrains, for casually beckoning me through the many doors scattered about the hallways of the academy.
+Thanks to Daniel Ashby, with whom I started wondering about anything one might call philosophy or wisdom, and who has always been a companion for wandering about.
+Thanks to Rick Wood for every trip to the back shelf, bottom row of the middle school library where they kept the books about esoteric, and arcane aspects of the mind, and the years of bus-stop walk and Scouting outing conversations, all of which probably led us straight to Cog Sci 100.
+I am so grateful to my dad, Pete Flournoy, for showing me the justice in truth and necessity of critique; and I am so grateful to my mom, Sally Flournoy, for explaining (perhaps when I was a little too young) why something like $2x=4$ is such an awesome concept, for advocating for my educational opportunities, and for showing me the necessity of optimism.
+Finally, to my wife, Melanie Berry, I want to express a level of gratitude which is as ineffable as the fact of existence.
+Her love and support has been the necessary precondition that makes any of the rest of these acknowledgments possible.
+She has been a stalwart and incisive collaborator on every iteration of every idea that has passed between my ears in the last eleven years. 
+Her own academic pursuits inspired me to undertake this project.
+Since she has known me, she has helped me understand what I am capable of doing, and she convinced me, at every juncture and against my worse judgment, that I could complete it.
+
 }
 \dedication{
-This is your optional dedication text;
-
-It can span over multiple lines.
-
+To who you are, and will never be.
+To Ozymandias.
+But most of all, to my wife, Melanie Berry.
 }
