final following revisions for grad school formatting

--- a/preamble.tex
+++ b/preamble.tex
@@ -118,13 +118,13 @@
 \makeatother
 \setlength\bibitemsep{0.5\baselineskip}
 
-\covertitle{Adolescent social motives: measurement and implications}
-\abstracttitle{Adolescent social motives: measurement and implications}
+\covertitle{Adolescent Social Motives: Measurement and Implications}
+\abstracttitle{Adolescent Social Motives: Measurement and Implications}
 \author{John C. Flournoy}
 \department{Department of Psychology}
 \narrowdepartment{Department of Psychology}
 \degreetype{Doctor of Philosophy}
-\degreemonth{August}
+\degreemonth{September}
 \degreeyear{2018}
 \chair{Jennifer Pfeifer}
 \committee{Sanjay Srivastava    & Co-Chair \\
@@ -134,7 +134,7 @@
 \abstract{
 The study of decision making during adolescence has received considerable attention throughout the history of developmental psychology, justifiably, given the marked increases in morbidity and mortality that belie otherwise robust health.
 Although the dominant theories invoked to help explain decision-making during adolescence acknowledge the existence of motivations that are thought to be central to this developmental period, there is little work that investigates the effects of these motives, per se.
-In particular, motivations toward developing sexual and romantic relationships, as well as finding one's optimal position in peer status hierarchies have both been acknowledged as especially relevant for this period of development.
+In particular, motivations toward developing sexual and romantic relationships, as well as toward navigating peer status hierarchies have both been acknowledged as especially relevant for this period of development.
 Almost all research in this area focuses on self-report, and is heavily weighted toward the domain of status and popularity.
 A major gap in this literature is an understanding of how adolescent-relevant motivations affect basic behavioral processes, and of the consequences of individual differences in motivations.
 
@@ -191,27 +191,26 @@ Jennifer Pfeifer was a profound and subtle guide as I sifted through a multiplic
 Sanjay Srivastava somehow laid bare, with calm, humor, or fury, as appropriate, vast sections of the machine we use to try to know things in this corner of science -- how much of the machine is still hidden, I don't know, but he also provided me tools to keep meddling about; and he showed me how to keep a light on, and a true path set, just as dark clouds appeared on the horizon.
 I'm grateful to Elliot Berkman, too, who has from the beginning encouraged my strengths, given support whenever asked, and provided clear and thoughtful discussion on problems in methodology, content, and professional development.
 And thanks to Nicole Giuliani who was willing to collaborate with me as an early grad student, who didn't mind my cantankerous fastidiousness, and who helped turn it toward useful ends.
-Kate Mills gave invaluable feedback when the plan for this project was just coalescing, shepherded its completion as each section began to take shape, but more vital than that, offered me professional camaraderie in that liminal space between mentor and peer.
-I would also like to thank Ruth O'Hara for giving me an opportunity to return to psychological research based on little more than my earnest conviction of interest in the field, and for subsequently, incidentally but not unintentionally, exposing me to didactic content for a full post-doctoral training program before I had even applied to graduate school.
-I would not have arrived at this point so easily without that kindness.
+Kate Mills gave invaluable feedback when the plan for this project was just coalescing, shepherded its completion as each section began to take shape, but more vital than that, offered me professional camaraderie in that liminal space between mentor and peer, for which I'm extremely grateful.
+I would also like to thank Ruth O'Hara for giving me an opportunity to return to research based on little more than my earnest conviction of interest in the field, and then for, incidentally but not unintentionally, exposing me to didactics from a full post-doctoral training program before I had even applied to graduate school.
+I would have gotten here so easily without that kindness.
+
+I owe Lori Olson immense gratitude for administrative and logistical support starting from when I submitted my application, to when the last form was signed and submitted.
 
 My appreciation is everlasting for the numerous fellow graduate students who enhanced every aspect of my life and work.
 My thanks goes to Rose Hartman, a role model who translated complexity into fluency, and who introduced me to Bayes.
-I am grateful, also, to Rose, Nicole Lawless DesJardins, and Allison Tackman for teaching me statistics; and to Rose and Nicole for establishing and cultivating R Club, where once a week or so we could all spend an hour basking in scientific computing with other methods mavens.
-Thanks to Will Moore, who taught me everything he could about neuroimaging, and who saw its problems with clear eyes.
-I owe Shannon Peak my thanks for suggesting, with a knowing grin, that I might like computational models of cognition.
-I am deeply grateful to Dani Cosme for her adroit intellect as we delved into countless conversations that shaped both how I understand development during adolescence and why I would want to; for conversations on so many other topics; and for inspiring pragmatic idealism by example.
+I am grateful, also, to Rose, Nicole Lawless DesJardins, and Allison Tackman for teaching me statistics; and to Rose and Nicole for establishing and cultivating R Club, where weekly we could spend an hour basking in scientific computing with other methods mavens.
+Thanks to Will Moore, who taught me everything he could about neuroimaging.
+I owe Shannon Peak thanks for suggesting that I might like computational models of cognition.
+I am grateful to Dani Cosme for her adroit intellect during countless conversations that shaped both how I understand development during adolescence and why I would want to; for conversations on so many other topics; and for inspiring pragmatic idealism by example.
 I am thankful for Arian Mobasser's friendship, and for the tremendous structure of community and wellbeing he built that sustained me and many others during this process.
 I am also thankful for Jimena Santillán's friendship, her industrious example, her advice on how exactly to start and finish this thing, and for her ear, which somehow makes things clearer.
-
-I owe Lori Olson an immense debt of gratitude for all the administrative support starting from when I submitted my application, and lasting until the last form was signed and submitted. 
-She made it possible to complete this project amidst the continuation of the rest of life.
 
 I am not the author of this dissertation but for the love and friendship of these coauthors of my life:
 Thanks to my sister, Michele Flournoy, who encouraged me to tag along with her on a career-changing adventure that reminded me how fun and rewarding concrete abstractions can be.
 Thanks to Andrei Boutyline, with whom I've hunted all manner of thought through nearly half of all conceivable terrains, for casually beckoning me through the many doors scattered about the hallways of the academy.
 Thanks to Daniel Ashby, with whom I started wondering about anything one might call philosophy or wisdom, and who has always been a companion for wandering about.
-Thanks to Rick Wood for every trip to the back shelf, bottom row of the middle school library where they kept the books about esoteric, and arcane aspects of the mind, and the years of bus-stop walk and Scouting outing conversations, all of which probably led us straight to Cog Sci 100.
+Thanks to Rick Wood for trips to the back shelf of the middle school library where they kept books about esoteric and arcane aspects of the mind, and the years of bus-stop walk and Scouting outing conversations, which probably led us straight to Cog Sci 100.
 I am so grateful to my dad, Pete Flournoy, for showing me the justice in truth and necessity of critique; and I am so grateful to my mom, Sally Flournoy, for explaining (perhaps when I was a little too young) why something like $2x=4$ is such an awesome concept, for advocating for my educational opportunities, and for showing me the necessity of optimism.
 Finally, to my wife, Melanie Berry, I want to express a level of gratitude which is as ineffable as the fact of existence.
 Her love and support has been the necessary precondition that makes any of the rest of these acknowledgments possible.
